--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -440,12 +440,20 @@ footer h3 {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
-@media (max-width: 800px) {
+@media (max-width: 820px) {
   .lodging {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+}
+.lodging .lodging-location {
+  width: 69%;
+}
+@media (max-width: 820px) {
+  .lodging .lodging-location {
+    width: 100%;
   }
 }
 .lodging h1 {
@@ -457,10 +465,10 @@ footer h3 {
   -webkit-transition-duration: 1s;
           transition-duration: 1s;
 }
-@media (max-width: 800px) {
+@media (max-width: 820px) {
   .lodging h1 {
     font-size: 18px;
-    line-height: 40px;
+    line-height: 25.67px;
     -webkit-transition-duration: 1s;
             transition-duration: 1s;
   }
@@ -473,9 +481,11 @@ footer h3 {
   -webkit-transition-duration: 1s;
           transition-duration: 1s;
 }
-@media (max-width: 800px) {
+@media (max-width: 820px) {
   .lodging h2 {
+    margin-bottom: 10px;
     font-size: 14px;
+    margin-top: -8px;
     line-height: 19.96px;
     -webkit-transition-duration: 1s;
             transition-duration: 1s;
@@ -489,6 +499,11 @@ footer h3 {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   padding-left: 0;
+}
+@media (max-width: 820px) {
+  .lodging-tags {
+    margin-top: -5px;
+  }
 }
 .lodging-tags li {
   display: -webkit-box;
@@ -511,12 +526,11 @@ footer h3 {
   color: white;
   background-color: #FF6060;
 }
-@media (max-width: 800px) {
+@media (max-width: 820px) {
   .lodging-tags li {
     font-size: 10px;
     width: 84px;
     height: 25px;
-    margin-top: 5px;
     margin-right: 10px;
     border-radius: 5px;
     -webkit-transition-duration: 1s;
@@ -537,17 +551,35 @@ footer h3 {
           justify-content: space-between;
 }
 .account .account-host {
-  margin-top: 15px;
+  margin-top: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+.account .account-star-bloc {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .account .account-star {
   margin-left: 30px;
 }
-@media (max-width: 800px) {
+@media (max-width: 820px) {
   .account .account-star {
     margin-left: 0;
+    margin-top: -30px;
   }
 }
-@media (max-width: 800px) {
+@media (max-width: 820px) {
   .account {
     display: grid;
     grid-template-rows: 100%;
@@ -567,24 +599,20 @@ footer h3 {
   }
 }
 
-.account-host-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
 .account-host-name {
-  width: 93px;
   font-family: "Montserrat";
+  text-align: right;
+  line-height: 25.67px;
+  width: 80px;
+  margin-right: 10px;
   font-weight: 500;
   font-size: 18px;
   color: #FF6060;
 }
-@media (max-width: 800px) {
+@media (max-width: 820px) {
   .account-host-name {
+    line-height: 5px;
+    width: 50px;
     font-size: 12px;
     line-height: 17.11px;
   }
@@ -595,7 +623,7 @@ footer h3 {
   width: 64px;
   border-radius: 32px;
 }
-@media (max-width: 800px) {
+@media (max-width: 820px) {
   .account-host-img {
     height: 32px;
     width: 32px;
@@ -606,12 +634,12 @@ footer h3 {
   height: 30px;
   width: 30px;
   margin-bottom: 22px;
+  margin-left: 5px;
 }
-@media (max-width: 800px) {
+@media (max-width: 820px) {
   .account-host-star {
     height: 15px;
     width: 15px;
-    margin-bottom: 0;
   }
 }
 
@@ -625,8 +653,18 @@ footer h3 {
   width: 100%;
   min-height: 100vh;
 }
+@media (max-width: 800px) {
+  .lodging-description-bloc {
+    min-height: 50vh;
+  }
+}
 .lodging-description-bloc div {
   width: 46%;
+}
+@media (max-width: 600px) {
+  .lodging-description-bloc div {
+    width: 100%;
+  }
 }
 .lodging-description-bloc button {
   display: -webkit-box;
@@ -663,6 +701,11 @@ footer h3 {
   }
   .lodging-description-bloc button img {
     width: 10px;
+  }
+}
+@media (max-width: 600px) {
+  .lodging-description-bloc button {
+    margin-top: 18px;
   }
 }
 .lodging-description-bloc button + div {
@@ -706,6 +749,17 @@ footer h3 {
   .lodging-description-bloc button + div li {
     font-size: 12px;
     padding-bottom: 16px;
+  }
+}
+@media (max-width: 600px) {
+  .lodging-description-bloc {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
   }
 }
 
